# IBM-Hackathon-Bob-Twin

./: .gitignore  DEMO_WORKFLOW_1.md  DEMO_WORKFLOW_2.md  LICENSE  Makefile  README.md  demo_run.py  pyproject.toml  requirements.lock.txt  requirements.txt
.bob/: custom_modes.yaml  mcp.json
.bob/rules-modernize-with-twin/: 01-audit-chain-integrity.md  02-session-logging.md
.bob/skills/twin-validator/: SKILL.md  tolerance-rules.yaml
audit_trail/: run_3d46f87a.jsonl  run_3d46f87a.report.md  run_58d1ea09.jsonl  run_6156b6c1.jsonl  run_9e5a2ee8.jsonl
dashboard/: app.py
demo_target/: __init__.py  requirements-v1.txt
demo_target/pydantic_v1_app/: __init__.py  main.py  models.py  routes.py
demo_target/pydantic_v2_naive/: __init__.py  main.py  models.py  routes.py  v2_naive__models.py  v2_naive__routes.py
docs/: APPROACH.md  DEMO_SCRIPT.md  PITCH.md  RISKS.md  SPEC.md  TIMELINE.md
golden_cassettes/: run_58d1ea09.yaml  run_6156b6c1.yaml  run_9e5a2ee8.yaml
samples/: sample_audit_chain.jsonl  sample_cassette.yaml  sample_run.report.md
scripts/: reset_demo.py  seed_demo_traffic.py  start_v1_app.py  start_v2_app.py
tests/: test_audit_chain.py  test_capture.py  test_diff_engine.py
twin_mcp/: __init__.py  audit.py  capture.py  cli.py  diff_engine.py  drift.py  replay.py  reports.py  server.py
