[project]
name = "bobs-twin"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastmcp>=2.0,<3.0",
    "vcrpy>=6.0.0",
    "deepdiff>=8.0.0",
    "pydantic>=2.6.0",
    "radon>=6.0.0",
    "vulture>=2.11",
    "streamlit>=1.30.0",
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
    "reportlab>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "ruff==0.2.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
